--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "habit-tracker",
+  "name": "todo-list",
   "version": "1.0.0",
   "description": "An Electron application with React",
   "main": "./dist/main/index.js",
@@ -16,7 +16,7 @@
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && electron-builder --linux --config",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-vite build --outDir=dist && electron-forge make"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
