--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:mac": "npm run build && electron-builder --mac --config",
     "build:linux": "npm run build && electron-builder --linux --config",
     "package": "electron-forge package",
-    "make": "electron-vite build --outDir=dist && electron-forge make"
+    "make": "electron-vite build --outDir=dist && electron-forge make",
+    "publish": "electron-forge publish"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
@@ -31,6 +32,7 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@electron-forge/publisher-github": "^7.2.0",
     "@electron-toolkit/eslint-config": "^1.0.1",
     "@electron-toolkit/eslint-config-prettier": "^1.0.1",
     "@vitejs/plugin-react": "^4.0.4",
